--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.7.0",
     "astro": "^5.16.9"
   },
   "devDependencies": {
